solve dark mode problem

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -77,3 +77,6 @@ ion-item {
       --padding-end: 16px;
     }
   }
+  * {
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
